--- a/_posts/2017-02-11-test-post-8.md
+++ b/_posts/2017-02-11-test-post-8.md
@@ -11,12 +11,15 @@ categories: Linux
 
 
 ### Daftar yang dipost :
+
+#### Variabel : 
+1. page.id 		: {{ page.id }} <br>
+2. page.url		: {{ page.url }} <br>
+3. page.path	: {{ page.path }} <br>
+4. site.url		: {{ site.url }} <br>
+5. post.url		: {{ post.url }} <br>
+
 <ul>
-{{ page.id }} <br>
-{{ page.url }} <br>
-{{ page.path }} <br>
-{{site.url}} <br>
-{{post.url}} <br>
   {% for post in site.posts %}
     <li>
       <a href="{{site.url}}{{post.url}}">{{ post.url }}</a>
