--- a/_posts/2017-02-11-test-post-8.md
+++ b/_posts/2017-02-11-test-post-8.md
@@ -2,7 +2,7 @@
 title:  This is the eigth test post.
 description: This is the eigth test post.
 header: Test Post 8
-categories: Linux
+categories: Examples
 ---
 ### Foto Cantik 
 ![image-title-here](/web/img/cantik.png){: .rkiri}
