Update Link and About

--- a/_posts/2017-02-11-test-post-8.md
+++ b/_posts/2017-02-11-test-post-8.md
@@ -5,7 +5,7 @@ header: Test Post 8
 categories: Examples
 ---
 ### Foto Cantik 
-![image-title-here](/web/img/cantik.png){: .rkiri}
+![image-title-here](/img/cantik.png){: .rkiri}
 <br>
 <br>
 
